feat: add project to webpack

--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -463,7 +463,7 @@ body {
   left: 50%;
   transform: translateX(-50%) translateY(-50%);
   display: inline-block;
-  background-image: url("/img/search.png");
+  background-image: url("../img/search.png");
   background-repeat: no-repeat;
   width: 100px;
   height: 100px;
@@ -491,7 +491,7 @@ body {
 /*---------------------------------------------------*/
 .test-inner {
   position: relative;
-  background-image: url("/img/rec.jpg");
+  background-image: url("../img/rec.jpg");
   background-size: 100% 100%;
   background-repeat: no-repeat;
   padding: 120px 0 120px 190px;
